[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Bouncer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/BouncerDown.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/arrow_bounce.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/arrow_bounce_left.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/hearts.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Level3.gd" type="Script" id=7]
[ext_resource path="res://sounds/music_level.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/goal.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/goal_stage.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/collision_out.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 19
font_data = SubResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51, 24.5 )

[node name="Level3" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 460.0, 392.0, 310.0, 437.0, 356.0, 487.0 ],
"_edit_vertical_guides_": [ 281.0, 813.0 ]
}

[node name="goal2" parent="." instance=ExtResource( 9 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 142, 93 )

[node name="arrow_bounce" parent="." instance=ExtResource( 4 )]
position = Vector2( -135, 462 )

[node name="arrow_bounce_left" parent="." instance=ExtResource( 5 )]
position = Vector2( 1019, 311 )

[node name="bounce_down" type="YSort" parent="."]

[node name="BouncerDown" parent="bounce_down" instance=ExtResource( 3 )]
position = Vector2( 281, 230 )

[node name="BouncerDown2" parent="bounce_down" instance=ExtResource( 3 )]
position = Vector2( 576, 96 )

[node name="BouncerDown3" parent="bounce_down" instance=ExtResource( 3 )]
position = Vector2( 395, 96 )

[node name="bounce_up" type="YSort" parent="."]

[node name="BouncerUp" parent="bounce_up" instance=ExtResource( 2 )]
position = Vector2( 278, 384 )

[node name="BouncerUp3" parent="bounce_up" instance=ExtResource( 2 )]
position = Vector2( 519, 381 )

[node name="BouncerUp4" parent="bounce_up" instance=ExtResource( 2 )]
position = Vector2( 133, 517 )

[node name="BouncerUp2" parent="bounce_up" instance=ExtResource( 2 )]
position = Vector2( 768, 382 )

[node name="text_bounce" type="Label" parent="."]
margin_left = 813.0
margin_top = 78.0
margin_right = 853.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "xxx"

[node name="text_time" type="Label" parent="."]
margin_left = 813.0
margin_top = 55.0
margin_right = 853.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "xxx"

[node name="active_arrow" type="Area2D" parent="." groups=["active_arrow"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="active_arrow"]
position = Vector2( 142, 163 )
shape = SubResource( 1 )

[node name="out_area" parent="." instance=ExtResource( 11 )]

[node name="hearts" parent="." instance=ExtResource( 6 )]

[node name="goal" parent="." instance=ExtResource( 10 )]

[node name="level_time" type="Timer" parent="."]
autostart = true

[node name="music_level" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[connection signal="timeout" from="level_time" to="." method="_on_level_time_timeout"]
